# Programming-in-C

./: .gitignore  CMakeLists.txt  README.md  lab1_task1.c  lab1_task2.c  lab1_task3.c  lab2_task1.c  lab2_task2.c  lab2_task3.c  lab2_task4_fcfs.c  lab2_task4_sjf.c
